# pixelprowlers

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS;md  CLAUDE.md  Dockerfile  Hostinger _ Agents.html  README.md  compose.yml  docker-compose.yml  nginx.conf  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
backend/: .dockerignore  .env.example  .gitignore  ADMIN_COCKPIT.md  Dockerfile  GRAPHQL_SECURITY.md  README.md  diagnostic_algo.py  diagnostic_data.py  manage.py  pyproject.toml  requirements.txt  schema.graphql  test_diagnostic.py
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_update_contact_service_choices.py
backend/audits/: admin.py  dossier_services.py  models.py  questions.py  rdv_services.py  refonte_analysis.py  refonte_questions.py  serializers.py  services.py  types.py  urls.py  validators.py  views.py
backend/audits/migrations/: 0001_initial.py  0002_citation_seed.py  (+8 more)
backend/catalogue/: admin.py  apps.py  models.py  schema.py  validators.py
backend/cockpit/: admin.py  apps.py
backend/config/: settings.py
backend/crm/: admin.py  contact_services.py  models.py  schema.py
backend/pixelprowlers/: asgi.py  graphql_security.py  notifications.py  schema.py  settings.py  urls.py  wsgi.py
backend/tracking/: README_INTEGRATION.md  admin.py  models.py  mutations.py  schema.py  serializers.py  types.py  urls.py  utils.py  views.py
backend/urgencies/: admin.py  apps.py  models.py  mutations.py  serializers.py  services.py  types.py  urls.py  views.py
(+571 files in other folders)
