[project]
name = "pixelprowlers-backend"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
  "Django==6.0.6",
  "djangorestframework>=3.16,<4",
  "psycopg[binary]==3.2.13",
  "django-environ==0.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pixelprowlers.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
